# backend/internal/handler/trip_gear_handler.go
@@ -8,6 +8,7 @@ import (
 	"summitmate/internal/apperror"
 	"summitmate/internal/handler/mapping"
 	"summitmate/internal/middleware"
+	"summitmate/internal/model"
 	"summitmate/internal/service"
 
 	openapi_types "github.com/oapi-codegen/runtime/types"
@@ -103,4 +104,30 @@ func (h *TripGearHandler) RemoveTripGear(w http.ResponseWriter, r *http.Request,
 	}
 
 	w.WriteHeader(http.StatusNoContent)
+}
+
+func (h *TripGearHandler) ReplaceAllTripGear(w http.ResponseWriter, r *http.Request, tripId openapi_types.UUID) {
+	userID, ok := middleware.GetUserIDFromContext(r.Context())
+	if !ok {
+		sendError(w, apperror.ErrUnauthorized)
+		return
+	}
+
+	var reqBody api.ReplaceAllTripGearJSONBody
+	if err := json.NewDecoder(r.Body).Decode(&reqBody); err != nil {
+		sendError(w, apperror.ErrBadRequest)
+		return
+	}
+
+	var items []*model.TripGearItem
+	for _, req := range reqBody {
+		items = append(items, mapping.ToModelTripGearItemFromAPI(req))
+	}
+
+	if err := h.svc.ReplaceAllItems(r.Context(), tripId.String(), userID, items); err != nil {
+		sendError(w, err)
+		return
+	}
+
+	w.WriteHeader(http.StatusOK)
 }
